# good-vibes-planner

./: .gitignore  DEPLOYMENT.md  README.md  dev.md  env.example  index.html  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js  vercel.json  vite.config.js
backend/: .gitignore  .replit  DEPLOYMENT.md  README.md  asgi.py  auth.py  config.py  create_db.py  database.py  good_vibes.db  main.py  models.py  pyproject.toml  railway.json  render.yaml  replit.nix  requirements.txt  schemas.py  wsgi.py  wsgi_fixed.py
src/: App.jsx  index.css
src/components/: Analytics.jsx  Login.jsx  MultiCalendarView.jsx  ProjectManager.jsx  Register.jsx  TodayView.jsx  TodoCreator.jsx  TodoItem.jsx  WeekOverview.jsx
src/config/: api.js
src/contexts/: AuthContext.jsx  TodoContext.jsx
src/services/: api.js  auth.js
